best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
 </ul>
 
 
-<figure id="org022a7d4">
+<figure id="org298c262">
 <img src="111/img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
 
 </figure>
