--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -26,7 +26,7 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
-<li><a href="#orged340ad">1.3. 其他</a>
+<li><a href="#org80eb935">1.3. 其他</a>
 <ul>
 <li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
 </ul>
@@ -49,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#org80eb935">5.7. 其他</a>
+<li><a href="#orga236d54">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#org277e3df">6.3. Action</a></li>
+<li><a href="#orgaed3d7e">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -74,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#orgaed3d7e">7.4. Action</a></li>
+<li><a href="#org30f263f">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -204,8 +204,8 @@
 </div>
 </div>
 
-<div id="outline-container-orged340ad" class="outline-3">
-<h3 id="orged340ad"><span class="section-number-3">1.3.</span> 其他</h3>
+<div id="outline-container-org80eb935" class="outline-3">
+<h3 id="org80eb935"><span class="section-number-3">1.3.</span> 其他</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org13f3194" class="outline-4">
@@ -573,7 +573,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="orga7e997f">
+<figure id="org5b0129e">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -763,7 +763,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org0dbcbdb">
+<pre class="example" id="org456e773">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -820,7 +820,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orga32fc1f">
+<pre class="example" id="orga01f1a0">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -1039,8 +1039,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-org80eb935" class="outline-3">
-<h3 id="org80eb935"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-orga236d54" class="outline-3">
+<h3 id="orga236d54"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1147,7 +1147,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="orgd8dee79">
+<figure id="org14c39e5">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1226,8 +1226,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org277e3df" class="outline-3">
-<h3 id="org277e3df"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-orgaed3d7e" class="outline-3">
+<h3 id="orgaed3d7e"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1465,8 +1465,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-orgaed3d7e" class="outline-3">
-<h3 id="orgaed3d7e"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-org30f263f" class="outline-3">
+<h3 id="org30f263f"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -2344,7 +2344,7 @@ collection.<span style="color: #721045;">Configure</span><span style="color: #00
 <span style="color: #000000;">{</span>
     <span style="color: #5317ac;">public</span> <span style="color: #721045;">UserService</span><span style="color: #a8007f;">(</span><span style="color: #005a5f;">IUserDAO</span> <span style="color: #00538b;">dao</span>, <span style="color: #005a5f;">IOptions</span><span style="color: #005f88;">&lt;</span><span style="color: #005a5f;">UserServiceOptions</span><span style="color: #005f88;">&gt;</span> <span style="color: #00538b;">options</span><span style="color: #a8007f;">)</span>
     <span style="color: #a8007f;">{</span>
-        <span style="color: #005a5f;">UserServiceOptions</span> <span style="color: #00538b;">opt</span> = options.<span style="color: #0000c0;">value</span>;
+        <span style="color: #005a5f;">UserServiceOptions</span> <span style="color: #00538b;">opt</span> = options.Value;
         Console.<span style="color: #721045;">WriteLine</span><span style="color: #005f88;">(</span>opt.Name<span style="color: #005f88;">)</span>;
         Console.<span style="color: #721045;">WriteLine</span><span style="color: #005f88;">(</span>opt.Weixin<span style="color: #005f88;">)</span>;
     <span style="color: #a8007f;">}</span>
