best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-09 -->
+<!-- 2022-11-11 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -41,24 +41,17 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
+<p>
+除了完成相关的代码外:
+</p>
 <ul class="org-ul">
-<li>整理并理解概念:
-<ul class="org-ul">
-<li>面向接口编程</li>
-<li>解耦合</li>
-<li>依赖注入 (DI)</li>
-<li>控制反转 (IoC)</li>
-</ul></li>
-<li>掌握 Microsoft.DI 容器在 MVC 中的基本使用</li>
-<li>预习 18 章，了解更多 DI 容器的知识</li>
-<li>务必保证每人第 8 章代码落实到位 (请组长做好监管)</li>
+<li>确保整理了 DI 容器的基本知识。最好将 Autofac 的使用也简单整理下</li>
+<li>整理并学会 Font Awesome 的使用</li>
+<li>整理并学会 Newtonsoft.JSON 的基本使用</li>
+<li>整理、总结并比较购物车的不同实现方式: Cookie/Session/Database</li>
+<li>整理并学会在 MVC Core 中如何使用 Session</li>
+<li>思考购物车的设计</li>
 </ul>
-
-
-<figure id="org298c262">
-<img src="111/img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
-
-</figure>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
@@ -164,7 +157,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-09</p>
+<p class="date">Created: 2022-11-11</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
