best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
 <li>整理、总结并比较购物车的不同实现方式: Cookie/Session/Database</li>
 <li>整理并学会在 MVC Core 中如何使用 Session</li>
 <li>思考购物车的设计</li>
+<li>有余力的继续进行订单管理代码的实现</li>
 </ul>
 
 <div><br>
