--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -63,6 +63,7 @@
 <li>整理、总结并比较购物车的不同实现方式: Cookie/Session/Database</li>
 <li>整理并学会在 MVC Core 中如何使用 Session</li>
 <li>思考购物车的设计</li>
+<li>有余力的继续进行订单管理代码的实现</li>
 </ul>
 </div>
 </section>
@@ -84,7 +85,7 @@
 </ul>
 
 
-<figure id="orgafe9131">
+<figure id="org5558d3e">
 <img src="img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
 
 </figure>
