--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-11 -->
+<!-- 2022-11-14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>任务和作业</title>
@@ -59,6 +59,7 @@
 <ul class="org-ul">
 <li>确保整理了 DI 容器的基本知识。最好将 Autofac 的使用也简单整理下</li>
 <li>整理并学会 Font Awesome 的使用</li>
+<li>了解什么是 SVG 和 Canvas</li>
 <li>整理并学会 Newtonsoft.JSON 的基本使用</li>
 <li>整理、总结并比较购物车的不同实现方式: Cookie/Session/Database</li>
 <li>整理并学会在 MVC Core 中如何使用 Session</li>
@@ -85,7 +86,7 @@
 </ul>
 
 
-<figure id="org5558d3e">
+<figure id="orgd9c6057">
 <img src="img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
 
 </figure>
@@ -519,7 +520,7 @@ https://xxx.com/yyy?name=xxx#kkkk
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-11</p>
+<p class="date">Created: 2022-11-14</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
