best_try_and_best_chance

--- a/html/frontend/1-html+css.html
+++ b/html/frontend/1-html+css.html
@@ -34,7 +34,7 @@
 </ul>
 </li>
 <li><a href="#org2626c7d">2.2. Viewport</a></li>
-<li><a href="#org79252e9">2.3. Media Type</a></li>
+<li><a href="#orga43251f">2.3. Media Query</a></li>
 </ul>
 </li>
 <li><a href="#org68801f2">3. bootstrap.css</a></li>
@@ -182,11 +182,11 @@ body { width: 1024px }
 </div>
 </div>
 
-<div id="outline-container-org79252e9" class="outline-3">
-<h3 id="org79252e9"><span class="section-number-3">2.3.</span> Media Type</h3>
+<div id="outline-container-orga43251f" class="outline-3">
+<h3 id="orga43251f"><span class="section-number-3">2.3.</span> Media Query</h3>
 <div class="outline-text-3" id="text-2-3">
 <p>
-为了在不同设备上渲染不同的样式，CSS 推出了 Media Type 的概念。
+为了在不同设备上渲染不同的样式，CSS 推出了 Media Query 的概念。
 </p>
 
 <p>
@@ -214,7 +214,7 @@ body { width: 1024px }
     <span style="color: #a8007f;">}</span>
 <span style="color: #000000;">}</span>
 
-<span style="color: #8f0075;">@media</span> <span style="color: #000000;">(</span>min-width: 1024px<span style="color: #000000;">)</span>
+<span style="color: #8f0075;">@media</span> <span style="color: #000000;">(</span>min-width: 2000px<span style="color: #000000;">)</span>
 <span style="color: #000000;">{</span>
     <span style="color: #5317ac;">div</span>
 <span style="color: #5317ac;">    </span><span style="color: #a8007f;">{</span>
