best_try_and_best_chance

--- a/html/frontend/1-html+css.html
+++ b/html/frontend/1-html+css.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-18 -->
+<!-- 2022-11-21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HTML/CSS</title>
@@ -35,6 +35,7 @@
 </li>
 <li><a href="#org2626c7d">2.2. Viewport</a></li>
 <li><a href="#orga43251f">2.3. Media Query</a></li>
+<li><a href="#org4818a78">2.4. CDN (Content Delivery Network)</a></li>
 </ul>
 </li>
 <li><a href="#org68801f2">3. bootstrap.css</a></li>
@@ -232,6 +233,10 @@ body { width: 1024px }
 </div>
 </div>
 </div>
+
+<div id="outline-container-org4818a78" class="outline-3">
+<h3 id="org4818a78"><span class="section-number-3">2.4.</span> CDN (Content Delivery Network)</h3>
+</div>
 </section>
 
 <section id="outline-container-org68801f2" class="outline-2">
@@ -244,12 +249,16 @@ body { width: 1024px }
 <p>
 流行的、经典的、引领了一代潮流的、 <del>非前端开发人员</del> 必须掌握的一个 CSS 框架。
 </p>
+
+<ul class="org-ul">
+<li>提供了更好的默认样式</li>
+</ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-18</p>
+<p class="date">Created: 2022-11-21</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
