--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-18 -->
+<!-- 2022-11-21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -41,18 +41,10 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<p>
-除了完成相关的代码外:
-</p>
 <ul class="org-ul">
-<li>确保整理了 DI 容器的基本知识。最好将 Autofac 的使用也简单整理下</li>
-<li>整理并学会 Font Awesome 的使用</li>
-<li>了解什么是 SVG 和 Canvas</li>
-<li>整理并学会 Newtonsoft.JSON 的基本使用</li>
-<li>整理、总结并比较购物车的不同实现方式: Cookie/Session/Database</li>
-<li>整理并学会在 MVC Core 中如何使用 Session</li>
-<li>思考购物车的设计</li>
-<li>有余力的继续进行订单管理代码的实现</li>
+<li>什么是盒子模型、文档流？如何进行页面布局？</li>
+<li>总结整理 Flexbox 的使用</li>
+<li>什么是 CDN？其原理，其优点缺点？</li>
 </ul>
 
 <div><br>
@@ -159,7 +151,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-18</p>
+<p class="date">Created: 2022-11-21</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
