best_try_and_best_chance

--- a/html/frontend/1-html+css.html
+++ b/html/frontend/1-html+css.html
@@ -250,8 +250,13 @@ body { width: 1024px }
 流行的、经典的、引领了一代潮流的、 <del>非前端开发人员</del> 必须掌握的一个 CSS 框架。
 </p>
 
+<p>
+预定义样式 + 预定义样式类:
+</p>
 <ul class="org-ul">
 <li>提供了更好的默认样式</li>
+<li>栅格系统、响应式布局</li>
+<li>组件化</li>
 </ul>
 </div>
 </section>
