--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -57,7 +57,7 @@
 <ul class="org-ul">
 <li>什么是盒子模型、文档流？如何进行页面布局？</li>
 <li>总结整理 Flexbox 的使用</li>
-<li>什么是 CDN？其原理，其优点缺点？</li>
+<li>什么是 CDN？其原理？其优点缺点？有哪些？</li>
 </ul>
 </div>
 </section>
@@ -98,7 +98,7 @@
 </ul>
 
 
-<figure id="org2f5535c">
+<figure id="org691fcae">
 <img src="img/oimg_20221108_034512.png" alt="oimg_20221108_034512.png">
 
 </figure>
