--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
 <ul class="org-ul">
 <li>什么是盒子模型、文档流？如何进行页面布局？</li>
 <li>总结整理 Flexbox 的使用</li>
-<li>什么是 CDN？其原理，其优点缺点？</li>
+<li>什么是 CDN？其原理？其优点缺点？有哪些？</li>
 </ul>
 
 <div><br>
