best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -45,6 +45,7 @@
 <li>什么是盒子模型、文档流？如何进行页面布局？</li>
 <li>总结整理 Flexbox 的使用</li>
 <li>什么是 CDN？其原理？其优点缺点？有哪些？</li>
+<li>了解 Bootstrap 的实现原理，掌握 Bootstrap 的基本使用。做好笔记和总结</li>
 </ul>
 
 <div><br>
