--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-11-17 -->
+<!-- 2022-11-25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -26,7 +26,7 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
-<li><a href="#orga236d54">1.3. 其他</a>
+<li><a href="#org4ab534e">1.3. 其他</a>
 <ul>
 <li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
 </ul>
@@ -49,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#org4ab534e">5.7. 其他</a>
+<li><a href="#orgfe9d2e2">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#org30f263f">6.3. Action</a></li>
+<li><a href="#orga1a5111">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -74,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#orga1a5111">7.4. Action</a></li>
+<li><a href="#orga5a9114">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -112,7 +112,8 @@
 </li>
 <li><a href="#orgfe4d7fe">9. ASP.NET Core MVC</a>
 <ul>
-<li><a href="#orgcbf2bf2">9.1. Summary</a></li>
+<li><a href="#org3de7c5d">9.1. 配置文件</a></li>
+<li><a href="#orgcbf2bf2">9.2. Summary</a></li>
 </ul>
 </li>
 </ul>
@@ -205,8 +206,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga236d54" class="outline-3">
-<h3 id="orga236d54"><span class="section-number-3">1.3.</span> 其他</h3>
+<div id="outline-container-org4ab534e" class="outline-3">
+<h3 id="org4ab534e"><span class="section-number-3">1.3.</span> 其他</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org13f3194" class="outline-4">
@@ -574,7 +575,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="orgcfe2342">
+<figure id="org6b7d069">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -764,7 +765,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org3b48a63">
+<pre class="example" id="orgfb64a69">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -821,7 +822,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org41b80c1">
+<pre class="example" id="org1bdd715">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -1040,8 +1041,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-org4ab534e" class="outline-3">
-<h3 id="org4ab534e"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-orgfe9d2e2" class="outline-3">
+<h3 id="orgfe9d2e2"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1148,7 +1149,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="org56e49a3">
+<figure id="orgd9c8bfb">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1227,8 +1228,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org30f263f" class="outline-3">
-<h3 id="org30f263f"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-orga1a5111" class="outline-3">
+<h3 id="orga1a5111"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1466,8 +1467,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-orga1a5111" class="outline-3">
-<h3 id="orga1a5111"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-orga5a9114" class="outline-3">
+<h3 id="orga5a9114"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -2402,9 +2403,39 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 <h2 id="orgfe4d7fe"><span class="section-number-2">9.</span> ASP.NET Core MVC</h2>
 <div class="outline-text-2" id="text-9">
 </div>
-<div id="outline-container-orgcbf2bf2" class="outline-3">
-<h3 id="orgcbf2bf2"><span class="section-number-3">9.1.</span> Summary</h3>
+<div id="outline-container-org3de7c5d" class="outline-3">
+<h3 id="org3de7c5d"><span class="section-number-3">9.1.</span> 配置文件</h3>
 <div class="outline-text-3" id="text-9-1">
+<ul class="org-ul">
+<li>xxx.proj</li>
+<li>Program.cs</li>
+<li>Startup.cs</li>
+</ul>
+
+<p>
+增加 package 的方法:
+</p>
+<ol class="org-ol">
+<li><p>
+直接在 xxx.proj 中添加:
+</p>
+<pre class="example">
+&lt;PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17"&gt;
+</pre></li>
+<li>使用 VS 的【管理 Nuget 包】添加</li>
+<li><p>
+使用 dotnet 命令行添加:
+</p>
+<pre class="example">
+dotnet package add Microsoft.EntityFrameworkCore.Tools
+</pre></li>
+</ol>
+</div>
+</div>
+
+<div id="outline-container-orgcbf2bf2" class="outline-3">
+<h3 id="orgcbf2bf2"><span class="section-number-3">9.2.</span> Summary</h3>
+<div class="outline-text-3" id="text-9-2">
 <ul class="org-ul">
 <li>IActionResult</li>
 <li>asp-for</li>
@@ -2415,7 +2446,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-11-17</p>
+<p class="date">Created: 2022-11-25</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
