--- a/html/frontend/0-http.html
+++ b/html/frontend/0-http.html
@@ -122,10 +122,42 @@ HTTP 是无状态的:
 
 <section id="outline-container-orga90fe0c" class="outline-2">
 <h2 id="orga90fe0c"><span class="section-number-2">2.</span> HTTPS</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+在 HTTP 的基础上，对收发端的数据基于 TLS 或 SSL 协议进行加密、解密，
+从而避免了在网络中数据明文传输导致的系列安全问题。
+</p>
+
+<p>
+它本质还是 HTTP 协议，只不过更安全。
+</p>
+</div>
 </section>
+
 <section id="outline-container-org5944784" class="outline-2">
 <h2 id="org5944784"><span class="section-number-2">3.</span> HTTP2</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+对原来的 HTTP 协议进行的 <b>改进、升级</b> 版本，主要是提高性能:
+</p>
+<ul class="org-ul">
+<li>对 1.x 协议语意的完全兼容，是升级不是重写</li>
+<li><p>
+重点是对终端用户的感知延迟、网络及服务器资源的使用等性能的优化
+</p>
+<pre class="example">
+二进制分帧/多路复用/头部压缩/...
+</pre></li>
+</ul>
+
+<p>
+对于 HTTP2 大家的争议有很多。
+它为了提升性能放弃了原来 HTTP1 的一些简洁性。
+不过，主流的浏览器和服务器都对 HTTP2 进行了支持。
+</p>
+</div>
 </section>
+
 <section id="outline-container-org7a1e755" class="outline-2">
 <h2 id="org7a1e755"><span class="section-number-2">4.</span> Websocket</h2>
 </section>
