--- a/html/frontend/0-http.html
+++ b/html/frontend/0-http.html
@@ -32,7 +32,14 @@
 <li><a href="#orga90fe0c">2. HTTPS</a></li>
 <li><a href="#org5944784">3. HTTP2</a></li>
 <li><a href="#org7a1e755">4. Websocket</a></li>
-<li><a href="#org081cc94">5. AJAX</a></li>
+<li><a href="#org081cc94">5. AJAX</a>
+<ul>
+<li><a href="#orga806546">5.1. XMLHttpRequest</a></li>
+<li><a href="#orgd54ae21">5.2. Fetch API</a></li>
+<li><a href="#org2a84c74">5.3. jQuery</a></li>
+<li><a href="#orge3e558c">5.4. axios.js</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </nav>
@@ -163,6 +170,181 @@ HTTP 是无状态的:
 </section>
 <section id="outline-container-org081cc94" class="outline-2">
 <h2 id="org081cc94"><span class="section-number-2">5.</span> AJAX</h2>
+<div class="outline-text-2" id="text-5">
+</div>
+<div id="outline-container-orga806546" class="outline-3">
+<h3 id="orga806546"><span class="section-number-3">5.1.</span> XMLHttpRequest</h3>
+<div class="outline-text-3" id="text-5-1">
+<div class="org-src-container">
+<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #721045;">body</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">div</span> <span style="color: #00538b;">id</span>=<span style="color: #2544bb;">"products"</span><span style="color: #000000;">&gt;</span>
+        &#27809;&#26377;&#21152;&#36733;&#23436;&#27605;...
+    <span style="color: #000000;">&lt;</span>/<span style="color: #721045;">div</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">div</span> <span style="color: #00538b;">id</span>=<span style="color: #2544bb;">"comments"</span><span style="color: #000000;">&gt;&lt;</span>/<span style="color: #721045;">div</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">div</span> <span style="color: #00538b;">id</span>=<span style="color: #2544bb;">"related"</span><span style="color: #000000;">&gt;&lt;</span>/<span style="color: #721045;">div</span><span style="color: #000000;">&gt;</span>
+
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">script</span><span style="color: #000000;">&gt;</span>
+       <span style="color: #5317ac;">function</span> <span style="color: #721045;">loadXxxFragment</span><span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+            <span style="color: #5317ac;">const</span> <span style="color: #00538b;">request</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">XMLHttpRequest</span><span style="color: #a8007f;">()</span>;
+            request.open<span style="color: #a8007f;">(</span><span style="color: #2544bb;">"get"</span>, <span style="color: #2544bb;">"/ajax/products"</span><span style="color: #a8007f;">)</span>;
+            request.send<span style="color: #a8007f;">()</span>;
+            request.onload = <span style="color: #5317ac;">function</span><span style="color: #a8007f;">()</span> <span style="color: #a8007f;">{</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">this.response</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">this.responseText</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">this.responseType</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">this.status</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">this.statusText</span>
+                <span style="color: #505050;">// </span><span style="color: #505050;">console.log(this.responseText)</span>
+                <span style="color: #5317ac;">var</span> <span style="color: #00538b;">res</span> = <span style="color: #0000c0;">this</span>.responseText;
+                <span style="color: #5317ac;">var</span> <span style="color: #00538b;">json</span> = JSON.parse<span style="color: #005f88;">(</span>res<span style="color: #005f88;">)</span>;
+                <span style="color: #5317ac;">var</span> <span style="color: #00538b;">h</span> = <span style="color: #2544bb;">"&lt;table border=1&gt;"</span>;
+                json.forEach<span style="color: #005f88;">(</span>x =&gt; <span style="color: #904200;">{</span>
+                    h += <span style="color: #2544bb;">`&lt;tr&gt;&lt;td&gt;${x.name}&lt;/td&gt;&lt;td&gt;${x.description}&lt;/td&gt;&lt;td&gt;${x.price}&lt;/td&gt;&lt;/tr&gt;`</span>;
+                <span style="color: #904200;">}</span><span style="color: #005f88;">)</span>
+                h += <span style="color: #2544bb;">"&lt;/table&gt;"</span>
+                document.querySelector<span style="color: #005f88;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #005f88;">)</span>.innerHTML = h;
+            <span style="color: #a8007f;">}</span>;
+        <span style="color: #000000;">}</span>
+
+        loadXxxFragment<span style="color: #000000;">()</span>;
+    <span style="color: #000000;">&lt;</span>/script<span style="color: #000000;">&gt;</span>
+<span style="color: #000000;">&lt;</span>/<span style="color: #721045;">body</span><span style="color: #000000;">&gt;</span>
+</pre>
+</div>
+
+<p>
+回调地狱:
+</p>
+<div class="org-src-container">
+<pre class="src src-js"><span style="color: #5317ac;">function</span> <span style="color: #721045;">myinit</span><span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+    <span style="color: #5317ac;">var</span> <span style="color: #00538b;">xhr1</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">XMLHttpRequest</span><span style="color: #a8007f;">()</span>;
+    xhr1.open<span style="color: #a8007f;">(</span><span style="color: #2544bb;">"GET"</span>, <span style="color: #2544bb;">"/top"</span><span style="color: #a8007f;">)</span>;
+    xhr1.send<span style="color: #a8007f;">()</span>;
+    xhr1.onload = <span style="color: #5317ac;">function</span> <span style="color: #a8007f;">()</span> <span style="color: #a8007f;">{</span>
+        xxxx.innerHTML = <span style="color: #0000c0;">this</span>.responseText;
+        <span style="color: #5317ac;">var</span> <span style="color: #00538b;">xhr2</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">XMLHttpRequest</span><span style="color: #005f88;">()</span>;
+        xhr2.open<span style="color: #005f88;">(</span><span style="color: #2544bb;">"GET"</span>, <span style="color: #2544bb;">"/bottomLeft"</span><span style="color: #005f88;">)</span>;
+        xhr2.send<span style="color: #005f88;">()</span>;
+        xhr2.onload = <span style="color: #5317ac;">function</span> <span style="color: #005f88;">()</span> <span style="color: #005f88;">{</span>
+            yyy.innerHTML = <span style="color: #0000c0;">this</span>.responseText;
+            <span style="color: #5317ac;">var</span> <span style="color: #00538b;">xhr3</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">XMLHttpRequest</span><span style="color: #904200;">()</span>;
+            xhr3.open<span style="color: #904200;">(</span><span style="color: #2544bb;">"GET"</span>, <span style="color: #2544bb;">"/bottomRight"</span><span style="color: #904200;">)</span>;
+            xhr3.send<span style="color: #904200;">()</span>;
+        <span style="color: #005f88;">}</span>
+    <span style="color: #a8007f;">}</span>;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+
+<p>
+Promise/async,await。
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgd54ae21" class="outline-3">
+<h3 id="orgd54ae21"><span class="section-number-3">5.2.</span> Fetch API</h3>
+<div class="outline-text-3" id="text-5-2">
+<p>
+新的 AJAX 标准，是为了取代 XMLHttpRequest 才出现的。
+</p>
+
+<div class="org-src-container">
+<pre class="src src-js"><span style="color: #5317ac;">function</span> <span style="color: #721045;">loadXxxFragment</span><span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+    fetch<span style="color: #a8007f;">(</span><span style="color: #2544bb;">"/ajax/products"</span>, <span style="color: #005f88;">{</span> method: <span style="color: #2544bb;">"get"</span> <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>
+        .then<span style="color: #a8007f;">(</span>resp =&gt; resp.json<span style="color: #005f88;">()</span><span style="color: #a8007f;">)</span>
+        .then<span style="color: #a8007f;">(</span>res =&gt; <span style="color: #005f88;">{</span>
+            console.log<span style="color: #904200;">(</span>res<span style="color: #904200;">)</span>;
+            <span style="color: #5317ac;">var</span> <span style="color: #00538b;">h</span> = <span style="color: #2544bb;">"&lt;table border=1 style='color: red'&gt;"</span>;
+            res.forEach<span style="color: #904200;">(</span>x =&gt; <span style="color: #7f10d0;">{</span>
+                h += <span style="color: #2544bb;">`&lt;tr&gt;&lt;td&gt;${x.name}&lt;/td&gt;&lt;td&gt;${x.description}&lt;/td&gt;&lt;td&gt;${x.price}&lt;/td&gt;&lt;/tr&gt;`</span>;
+            <span style="color: #7f10d0;">}</span><span style="color: #904200;">)</span>
+            h += <span style="color: #2544bb;">"&lt;/table&gt;"</span>
+            document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = h;
+        <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>.<span style="color: #5317ac;">catch</span><span style="color: #a8007f;">(</span>err =&gt; <span style="color: #005f88;">{</span>
+            console.log<span style="color: #904200;">(</span>err<span style="color: #904200;">)</span>;
+            document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = <span style="color: #2544bb;">"&#21152;&#36733;&#22833;&#36133;"</span>;
+        <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org2a84c74" class="outline-3">
+<h3 id="org2a84c74"><span class="section-number-3">5.3.</span> jQuery</h3>
+<div class="outline-text-3" id="text-5-3">
+<div class="org-src-container">
+<pre class="src src-js"><span style="color: #5317ac;">function</span> <span style="color: #721045;">loadXxxFragment</span><span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+    $.ajax<span style="color: #a8007f;">(</span><span style="color: #005f88;">{</span>
+        url: <span style="color: #2544bb;">"/ajax/products"</span>,
+        method: <span style="color: #2544bb;">"get"</span>
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>.done<span style="color: #a8007f;">(</span><span style="color: #5317ac;">function</span> <span style="color: #005f88;">(</span><span style="color: #00538b;">res</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">{</span>
+        console.log<span style="color: #904200;">(</span>res<span style="color: #904200;">)</span>;
+        <span style="color: #5317ac;">var</span> <span style="color: #00538b;">h</span> = <span style="color: #2544bb;">"&lt;table border=1 style='color: green'&gt;"</span>;
+        res.forEach<span style="color: #904200;">(</span>x =&gt; <span style="color: #7f10d0;">{</span>
+            h += <span style="color: #2544bb;">`&lt;tr&gt;&lt;td&gt;${x.name}&lt;/td&gt;&lt;td&gt;${x.description}&lt;/td&gt;&lt;td&gt;${x.price}&lt;/td&gt;&lt;/tr&gt;`</span>;
+        <span style="color: #7f10d0;">}</span><span style="color: #904200;">)</span>
+        h += <span style="color: #2544bb;">"&lt;/table&gt;"</span>
+        document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = h;
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>.fail<span style="color: #a8007f;">(</span><span style="color: #5317ac;">function</span> <span style="color: #005f88;">(</span><span style="color: #00538b;">err</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">{</span>
+        document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = <span style="color: #2544bb;">"&#21152;&#36733;&#22833;&#36133;"</span>;
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>;
+
+    <span style="color: #505050;">// </span><span style="color: #505050;">$.get("/ajax/products").done.fail;</span>
+    <span style="color: #505050;">// </span><span style="color: #505050;">$.post/getJson</span>
+    <span style="color: #505050;">// </span><span style="color: #505050;">$.load("/ajax/product", document.querySelector("#products"));</span>
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orge3e558c" class="outline-3">
+<h3 id="orge3e558c"><span class="section-number-3">5.4.</span> axios.js</h3>
+<div class="outline-text-3" id="text-5-4">
+<p>
+<a href="https://www.axios-http.cn/">https://www.axios-http.cn/</a>
+</p>
+
+<div class="org-src-container">
+<pre class="src src-js"><span style="color: #5317ac;">function</span> <span style="color: #721045;">loadXxxFragment</span><span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+    axios<span style="color: #a8007f;">(</span><span style="color: #005f88;">{</span>
+        url: <span style="color: #2544bb;">"/ajax/products"</span>,
+        method: <span style="color: #2544bb;">"get"</span>
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>.then<span style="color: #a8007f;">(</span><span style="color: #5317ac;">function</span> <span style="color: #005f88;">(</span><span style="color: #00538b;">resp</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">{</span>
+        <span style="color: #5317ac;">var</span> <span style="color: #00538b;">res</span> = resp.data;
+        <span style="color: #5317ac;">var</span> <span style="color: #00538b;">h</span> = <span style="color: #2544bb;">"&lt;table border=1 style='color: purple'&gt;"</span>;
+        res.forEach<span style="color: #904200;">(</span>x =&gt; <span style="color: #7f10d0;">{</span>
+            h += <span style="color: #2544bb;">`&lt;tr&gt;&lt;td&gt;${x.name}&lt;/td&gt;&lt;td&gt;${x.description}&lt;/td&gt;&lt;td&gt;${x.price}&lt;/td&gt;&lt;/tr&gt;`</span>;
+        <span style="color: #7f10d0;">}</span><span style="color: #904200;">)</span>
+        h += <span style="color: #2544bb;">"&lt;/table&gt;"</span>
+        document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = h;
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>.<span style="color: #5317ac;">catch</span><span style="color: #a8007f;">(</span><span style="color: #5317ac;">function</span> <span style="color: #005f88;">()</span> <span style="color: #005f88;">{</span>
+        document.querySelector<span style="color: #904200;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #904200;">)</span>.innerHTML = <span style="color: #2544bb;">"&#21152;&#36733;&#22833;&#36133;"</span>;
+    <span style="color: #005f88;">}</span><span style="color: #a8007f;">)</span>;
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+
+<div class="org-src-container">
+<pre class="src src-js"><span style="color: #5317ac;">async</span> <span style="color: #5317ac;">function</span> loadXxxFragment<span style="color: #000000;">()</span> <span style="color: #000000;">{</span>
+    <span style="color: #5317ac;">try</span> <span style="color: #a8007f;">{</span>
+        <span style="color: #5317ac;">const</span> <span style="color: #00538b;">resp</span> = <span style="color: #5317ac;">await</span> axios.get<span style="color: #005f88;">(</span><span style="color: #2544bb;">"/ajax/products"</span><span style="color: #005f88;">)</span>;
+        <span style="color: #5317ac;">var</span> <span style="color: #00538b;">h</span> = <span style="color: #2544bb;">"&lt;table border=1 style='color: blue'&gt;"</span>;
+        resp.data.forEach<span style="color: #005f88;">(</span>x =&gt; <span style="color: #904200;">{</span>
+            h += <span style="color: #2544bb;">`&lt;tr&gt;&lt;td&gt;${x.name}&lt;/td&gt;&lt;td&gt;${x.description}&lt;/td&gt;&lt;td&gt;${x.price}&lt;/td&gt;&lt;/tr&gt;`</span>;
+        <span style="color: #904200;">}</span><span style="color: #005f88;">)</span>
+        h += <span style="color: #2544bb;">"&lt;/table&gt;"</span>
+        document.querySelector<span style="color: #005f88;">(</span><span style="color: #2544bb;">"#products"</span><span style="color: #005f88;">)</span>.innerHTML = h;
+    <span style="color: #a8007f;">}</span> <span style="color: #5317ac;">catch</span> <span style="color: #a8007f;">{</span>
+        <span style="color: #505050;">// </span><span style="color: #505050;">&#30465;&#30053;&#25481;</span>
+    <span style="color: #a8007f;">}</span>
+<span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
 </section>
 </div>
 <div id="postamble" class="status">
